APEX-792: View display changes

--- a/config/apex-tools/default/core.entity_view_display.paragraph.bit_dimensions.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.bit_dimensions.default.yml
@@ -16,21 +16,21 @@ mode: default
 content:
   field_a_overall_length:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
   field_b_body_diameter:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
   field_c_turned_length:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 2
