--- a/config/apex-tools/default/core.entity_view_display.paragraph.bit_holder_retention_method.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.bit_holder_retention_method.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_bit_holder_retention_metho:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
