--- a/config/apex-tools/default/core.entity_view_display.paragraph.cover_features.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.cover_features.default.yml
@@ -15,14 +15,14 @@ mode: default
 content:
   field_cover_features_radio:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
   field_nylon_requirements_yes_no_:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
