--- a/config/apex-tools/default/core.entity_view_display.paragraph.dimensions.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.dimensions.default.yml
@@ -20,21 +20,21 @@ mode: default
 content:
   field_b_socket_length:
     type: physical_measurement_default
-    label: hidden
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
   field_c_socket_diameter:
     type: physical_measurement_default
-    label: hidden
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
   field_counter_bored_bool:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
@@ -44,21 +44,21 @@ content:
     region: content
   field_depth_of_clearance:
     type: physical_measurement_default
-    label: hidden
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 2
     region: content
   field_l_shank_length:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 5
     region: content
   field_nose_dia:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 7
