--- a/config/apex-tools/default/core.entity_view_display.paragraph.drive_configuration_para.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.drive_configuration_para.default.yml
@@ -18,28 +18,28 @@ mode: default
 content:
   field_drive_configuration:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
   field_hex_gender:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
   field_hex_size:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 2
     region: content
   field_hex_type:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -47,7 +47,7 @@ content:
     region: content
   field_other_type:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
