--- a/config/apex-tools/default/core.entity_view_display.paragraph.female_square_drive_short.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.female_square_drive_short.default.yml
@@ -16,7 +16,7 @@ mode: default
 content:
   field_feamale_square_drive:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
@@ -26,14 +26,14 @@ content:
     region: content
   field_ib:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 2
     region: content
   field_sd:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
