--- a/config/apex-tools/default/core.entity_view_display.paragraph.male_hex_drive_standard_type.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.male_hex_drive_standard_type.default.yml
@@ -16,21 +16,21 @@ mode: default
 content:
   field_hex_drive:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
   field_iron_brand_uni:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 2
     region: content
   field_male_hex_drive_standard_ty:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
