--- a/config/apex-tools/default/core.entity_view_display.paragraph.media_file.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.media_file.default.yml
@@ -17,7 +17,7 @@ mode: default
 content:
   field_upload_1:
     type: file_default
-    label: above
+    label: inline
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
@@ -25,7 +25,7 @@ content:
     region: content
   field_upload_2:
     type: file_default
-    label: above
+    label: inline
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
@@ -33,7 +33,7 @@ content:
     region: content
   field_upload_3:
     type: file_default
-    label: above
+    label: inline
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
@@ -41,7 +41,7 @@ content:
     region: content
   field_upload_4:
     type: file_default
-    label: above
+    label: inline
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
