--- a/config/apex-tools/default/core.entity_view_display.paragraph.phillips_acr.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.phillips_acr.default.yml
@@ -16,14 +16,14 @@ mode: default
 content:
   field_philips_acr_point_size:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 2
     region: content
   field_phillips_acr_r_:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
@@ -33,7 +33,7 @@ content:
     region: content
   field_type_:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 3
