--- a/config/apex-tools/default/core.entity_view_display.paragraph.quotation_order_type.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.quotation_order_type.default.yml
@@ -19,14 +19,14 @@ mode: default
 content:
   field_add_spec:
     type: basic_string
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 3
     region: content
   field_applied_or_driving_torque:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -50,14 +50,14 @@ content:
     region: content
   field_order_type:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
   field_quantity:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -65,7 +65,7 @@ content:
     region: content
   field_tool_industry:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 2
