--- a/config/apex-tools/default/core.entity_view_display.paragraph.screwdriver_part_type.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.screwdriver_part_type.default.yml
@@ -15,14 +15,14 @@ mode: default
 content:
   field_1_part_type:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
   field_bit_standard:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
