--- a/config/apex-tools/default/core.entity_view_display.paragraph.slotted.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.slotted.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_blade_thickness:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -22,7 +22,7 @@ content:
     region: content
   field_blade_width:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -30,7 +30,7 @@ content:
     region: content
   field_slotted:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
