--- a/config/apex-tools/default/core.entity_view_display.paragraph.socket_type.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.socket_type.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_socket_type_allowed:
     type: list_default
-    label: hidden
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
