--- a/config/apex-tools/default/core.entity_view_display.paragraph.broach_opening.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.broach_opening.default.yml
@@ -15,7 +15,7 @@ mode: default
 content:
   field_broach_opening_allowed:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 12
@@ -61,7 +61,7 @@ content:
     region: content
   field_type_other:
     type: string
-    label: hidden
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
