--- a/config/apex-tools/default/core.entity_view_display.paragraph.drive_type_other.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.drive_type_other.default.yml
@@ -13,7 +13,7 @@ mode: default
 content:
   field_specify:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -21,7 +21,7 @@ content:
     region: content
   field_torx:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
