--- a/config/apex-tools/default/core.entity_view_display.paragraph.optional_features.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.optional_features.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_optional_feature:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
