--- a/config/apex-tools/default/core.entity_view_display.paragraph.other_drive_consideration.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.other_drive_consideration.default.yml
@@ -12,7 +12,7 @@ mode: default
 content:
   field_counter_bored:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
