--- a/config/apex-tools/default/core.entity_view_display.paragraph.pozidriv_r.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.pozidriv_r.default.yml
@@ -15,14 +15,14 @@ mode: default
 content:
   field_pozidriv_point_size:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
   field_torx:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
