--- a/config/apex-tools/default/core.entity_view_display.paragraph.quotation_screwdriver_style.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.quotation_screwdriver_style.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_screwdriver_style:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: inline
     settings:
       view_mode: default
       link: ''
