--- a/config/apex-tools/default/core.entity_view_display.paragraph.screwdriver_cover_features.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.screwdriver_cover_features.default.yml
@@ -27,7 +27,7 @@ mode: default
 content:
   field_c_sink_dia_ang_ect:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
@@ -37,7 +37,7 @@ content:
     region: content
   field_embedded_magnets:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -61,7 +61,7 @@ content:
     region: content
   field_exposed_tip_of_bit:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -85,7 +85,7 @@ content:
     region: content
   field_fasterner_info:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -109,7 +109,7 @@ content:
     region: content
   field_flush_with_tip_of_bit:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
@@ -119,7 +119,7 @@ content:
     region: content
   field_free_spinning:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
@@ -129,7 +129,7 @@ content:
     region: content
   field_material:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -153,7 +153,7 @@ content:
     region: content
   field_o_d_limitations:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -177,7 +177,7 @@ content:
     region: content
   field_other_considerations:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -201,7 +201,7 @@ content:
     region: content
   field_recessed_tip_of_bit:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -225,7 +225,7 @@ content:
     region: content
   field_retractable:
     type: triples_field_table
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
@@ -264,7 +264,7 @@ content:
     region: content
   field_screw_press_fit:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
@@ -274,7 +274,7 @@ content:
     region: content
   field_spring_force:
     type: double_field_unformatted_list
-    label: above
+    label: inline
     settings:
       first:
         format_type: medium
