--- a/config/apex-tools/default/core.entity_view_display.paragraph.socket_dimensions.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.socket_dimensions.default.yml
@@ -29,49 +29,49 @@ mode: default
 content:
   field_a_square_drive:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
   field_b_drive_end_diameter:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
   field_c_overall_length:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 2
     region: content
   field_d_taper_or_shoulder_length:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 3
     region: content
   field_e_bolt_clearance_depth:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 4
     region: content
   field_f_broach_depth:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 5
     region: content
   field_full_compressed:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -79,49 +79,49 @@ content:
     region: content
   field_g_nose_end_diameter:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 6
     region: content
   field_h_broach_opening:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 7
     region: content
   field_i_torx_r_size:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 8
     region: content
   field_j_mag_depth:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 9
     region: content
   field_k_spring_force_rate_:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 10
     region: content
   field_l_barbell_style_dims:
     type: physical_measurement_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 14
     region: content
   field_rate_lbf_in_:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -129,7 +129,7 @@ content:
     region: content
   field_rest:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
