--- a/config/apex-tools/default/core.entity_view_display.paragraph.triple_square.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.triple_square.default.yml
@@ -15,7 +15,7 @@ mode: default
 content:
   field_triple_square:
     type: boolean
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
@@ -25,7 +25,7 @@ content:
     region: content
   field_triple_square_point_size:
     type: list_default
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
     weight: 1
