APEX-792: Permission issue

--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -225,6 +225,7 @@ permissions:
   - 'view paragraph content torx_plus_r'
   - 'view paragraph content torx_r'
   - 'view paragraph content triple_square'
+  - 'view paragraph content universal_swivel_wrench_para'
   - 'view paragraph content video_bundle'
   - 'view quotation'
   - 'view term names in continent'
