feature/APEX-690: added patches for D10 compatibility

--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
         "drupal/devel_php": "^1.5",
         "drupal/diff": "^1.1",
         "drupal/double_field": "^4.1",
+        "drupal/drupalmoduleupgrader": "^1.9",
         "drupal/dynamic_entity_reference": "^4.0@alpha",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/edit_uuid": "^2.1",
@@ -115,7 +116,7 @@
         "drupal/imageapi_optimize_webp": "^2.0",
         "drupal/imagemagick": "^3.4",
         "drupal/inline_entity_form": "^1.0@RC",
-        "drupal/jquery_ui": "^1.4",
+        "drupal/jquery_ui": "^1.6",
         "drupal/jquery_ui_sortable": "^1.1",
         "drupal/jsonapi_extras": "^3.23",
         "drupal/layout_paragraphs": "^2.0",
@@ -163,7 +164,7 @@
         "drupal/simple_sitemap": "^4.1",
         "drupal/sitemap": "^2.0@beta",
         "drupal/smart_trim": "^2.0",
-        "drupal/stage_file_proxy": "^2.0",
+        "drupal/stage_file_proxy": "^2.1",
         "drupal/structure_sync": "^2.0",
         "drupal/svg_image": "^3.0",
         "drupal/swiftmailer": "^2.4",
@@ -349,7 +350,8 @@
                 "https://www.drupal.org/node/3023212": "https://www.drupal.org/files/issues/2018-12-31/missing_schema_field_formatter.patch"
             },
             "drupal/theme_filter": {
-                "https://www.drupal.org/project/theme_filter/issues/3272812": "https://www.drupal.org/files/issues/2022-03-31/theme_filter-3272812.patch"
+                "https://www.drupal.org/project/theme_filter/issues/3272812": "https://www.drupal.org/files/issues/2022-03-31/theme_filter-3272812.patch",
+                "D10 compatibility": "https://www.drupal.org/files/issues/2022-07-23/theme_filter.1.1.rector.patch"
             },
             "drupal/viewsreference": {
                 "https://www.drupal.org/node/3192468": "https://www.drupal.org/files/issues/2021-01-12/3192468-2.patch"
@@ -393,6 +395,15 @@
             },
             "drupal/viewsreference_filter": {
                 "D10 compatibility": "https://www.drupal.org/files/issues/2022-07-23/viewsreference_filter.1.x-dev.rector.patch"
+            },
+            "drupal/default_paragraphs": {
+                "D10 compatibility": "https://www.drupal.org/files/issues/2023-07-11/default_paragraphs.2.0.0-rc1.rector-14.patch"
+            },
+            "drupal/sfweb2lead_webform": {
+                "D10 compatibility": "https://www.drupal.org/files/issues/2023-07-11/sfweb2lead_webform-drupal-10-compatibility-fix-3289580-14.patch"
+            },
+            "drupal/path_redirect_import": {
+                "MigrateTools issue": "https://www.drupal.org/files/issues/2023-07-11/3313386_11.patch"
             }
 
 
