Apex-793: Crescenttool custom theme update issue resolved.

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -217,7 +217,7 @@ node--full--page:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench/library--jquery-roving-tabindex
 
 node--full--product:
@@ -232,7 +232,7 @@ node--full--product:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--swiper
     - crescenttool/library--jquery-roving-tabindex
 
@@ -246,7 +246,7 @@ node--full--product-category:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--jquery-roving-tabindex
 
 node--full--product-brand:
@@ -343,7 +343,7 @@ paragraph--full--accordion:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--jquery-roving-tabindex
 
 # Content #
@@ -385,7 +385,7 @@ paragraph--full--hero:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--swiper
 
 # Hero Slide #
@@ -399,7 +399,7 @@ paragraph--full--hero-slide:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Featured: Content #
 paragraph--full--featured-content:
@@ -440,7 +440,7 @@ paragraph--full--featured-media:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 paragraph--full--featured-media--layout-full:
   version: 1.x
@@ -488,7 +488,7 @@ paragraph--full--product-slider:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--swiper
 
 # Banner CTA Slider #
@@ -502,7 +502,7 @@ paragraph--full--banner-cta-slider:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--swiper
 
 # Pull Quote #
@@ -537,7 +537,7 @@ paragraph--full--tabs:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--jquery-roving-tabindex
 
 # Top Message CTA Bar #
@@ -551,7 +551,7 @@ paragraph--full--top-message-cta-bar:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 
 # ========= Region ========= #
@@ -574,7 +574,7 @@ region--header:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Footer #
 region--footer-first:
@@ -587,7 +587,7 @@ region--footer-first:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # ========= Views ========= #
 
@@ -622,7 +622,7 @@ view--related-products:
     - core/drupal
     - core/jquery
     - crescenttool/library--swiper
-    - core/jquery.once
+    - core/once
 
 view--product-listing-grid:
   version: 1.x
@@ -684,7 +684,7 @@ view--social-feed:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--swiper
     - crescenttool/library--add-to-any
 
@@ -699,5 +699,5 @@ webform--warranty-replacement-form:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool/library--jquery-roving-tabindex
