Apex-793: Apex tool custom theme update issue completed.

--- a/docroot/themes/custom/apex_tools/apex_tools.libraries.yml
+++ b/docroot/themes/custom/apex_tools/apex_tools.libraries.yml
@@ -11,7 +11,7 @@ base-js:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 drupal:
   js:
@@ -19,7 +19,7 @@ drupal:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 hubspot:
   header: true
@@ -27,5 +27,5 @@ hubspot:
     //js.hsforms.net/forms/embed/v2.js: {}
   dependencies:
     - core/jquery
-    - core/jquery.once
+    - core/once
     - core/drupal
