--- a/composer.json
+++ b/composer.json
@@ -192,6 +192,7 @@
         "furf/jquery-ui-touch-punch": "^1.0",
         "geocoder-php/google-maps-provider": "^4.7",
         "league/flysystem-sftp": "^2.0",
+        "mglaman/composer-drupal-lenient": "^1.0",
         "monolog/monolog": "^2.9",
         "mpdf/mpdf": "^8.1",
         "topfloor/composer-cleanup-vcs-dirs": "^1.1",
@@ -224,7 +225,8 @@
             "drupal/core-project-message": true,
             "drupal/core-vendor-hardening": true,
             "topfloor/composer-cleanup-vcs-dirs": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "mglaman/composer-drupal-lenient": true
         }
     },
     "autoload": {
@@ -358,7 +360,8 @@
                 "https://www.drupal.org/node/3192468": "https://www.drupal.org/files/issues/2021-01-12/3192468-2.patch"
             },
             "drupal/viewsreference_filter": {
-                "https://www.drupal.org/node/3192458": "https://www.drupal.org/files/issues/2021-01-12/3192458-2.patch"
+                "https://www.drupal.org/node/3192458": "https://www.drupal.org/files/issues/2021-01-12/3192458-2.patch",
+                "D10 compatibility": "https://www.drupal.org/files/issues/2022-07-23/viewsreference_filter.1.x-dev.rector.patch"
             },
             "drupal/views_selective_filters": {
                 "https://www.drupal.org/project/views_selective_filters/issues/3170132": "https://www.drupal.org/files/issues/2021-06-16/d9-compatibility-fixes-3170132-6.patch"
@@ -377,7 +380,8 @@
             "drupal/we_megamenu": {
                 "D10 compatibility": "https://www.drupal.org/files/issues/2023-03-16/we_megamenu-fix-drupal-10.patch",
                 "D10 deprecations fix": "https://www.drupal.org/files/issues/2023-03-16/we_megamenu-fix-php8-deprecations.patch",
-                "https://www.drupal.org/project/we_megamenu/issues/3226361": "https://www.drupal.org/files/issues/2022-05-30/3226361_10.patch"
+                "https://www.drupal.org/project/we_megamenu/issues/3226361": "https://www.drupal.org/files/issues/2022-05-30/3226361_10.patch",
+                "Menu blocks label issue": "https://www.drupal.org/files/issues/2023-05-06/we_megamenu-block_label_incorrectly_defined-3357546.patch"
             },
             "drupal/fixed_block_content": {
                 "Access Issue for anonymous users": "https://www.drupal.org/files/issues/2022-11-11/3272253-fixed_blocks_not_visible_to_guest_users-5.patch"
@@ -395,9 +399,6 @@
             "drupal/jquery_ui_sortable": {
                 "D10 compatibility": "https://www.drupal.org/files/issues/2022-06-16/jquery_ui_sortable.1.x-dev.rector.patch"
             },
-            "drupal/viewsreference_filter": {
-                "D10 compatibility": "https://www.drupal.org/files/issues/2022-07-23/viewsreference_filter.1.x-dev.rector.patch"
-            },
             "drupal/default_paragraphs": {
                 "D10 compatibility": "https://www.drupal.org/files/issues/2023-07-11/default_paragraphs.2.0.0-rc1.rector-14.patch"
             },
@@ -412,6 +413,19 @@
         },
         "patchLevel": {
             "drupal/core": "-p2"
+        },
+        "drupal-lenient": {
+            "allowed-list": [
+                "drupal/theme_filter",
+                "drupal/viewsreference_filter",
+                "drupal/content_sync",
+                "drupal/we_megamenu",
+                "drupal/config_export_ignore",
+                "drupal/edit_uuid",
+                "drupal/jquery_ui_sortable",
+                "drupal/default_paragraphs",
+                "drupal/sfweb2lead_webform"
+            ]
         }
     }
 }
