Apex-793: Apex tool group custom theme upgraded issue fix.

--- a/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
+++ b/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
@@ -30,7 +30,7 @@ global:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 homepage-slider:
   css:
@@ -43,7 +43,7 @@ homepage-slider:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 brand-timeline:
   css:
@@ -56,7 +56,7 @@ brand-timeline:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 offices-map:
   js:
@@ -65,7 +65,7 @@ offices-map:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 faq-listing:
   js:
