--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,7 +25,8 @@ definitions:
           - export PROJECT_ROOT="${BITBUCKET_CLONE_DIR}"
           - export $(grep '^DOCROOT=' .docksal/docksal.env)
           - export DOCROOT=${DOCROOT:-docroot}
-
+          - composer self-update
+          - composer -v
           # Run init script in CI mode.
           - .docksal/commands/init ci
         artifacts:
