Composer version and php verison check

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,8 +25,9 @@ definitions:
           - export PROJECT_ROOT="${BITBUCKET_CLONE_DIR}"
           - export $(grep '^DOCROOT=' .docksal/docksal.env)
           - export DOCROOT=${DOCROOT:-docroot}
-          - sudo composer self-update
+          - sudo composer self-update --2.2
           - composer -v
+          - php -v
           # Run init script in CI mode.
           - .docksal/commands/init ci
         artifacts:
