Apex-793: Crescenttoll and crescenttool-au custom theme upgrade issue completed.

--- a/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
+++ b/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
@@ -232,7 +232,7 @@ node--full--product:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--swiper
     - crescenttool_au/library--jquery-roving-tabindex
     - crescenttool_au/library--jquery-modal
@@ -247,7 +247,7 @@ node--full--product-category:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--jquery-roving-tabindex
 
 node--full--product-brand:
@@ -260,7 +260,7 @@ node--full--product-brand:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--jquery-roving-tabindex
 
 node--full--product-industry:
@@ -355,7 +355,7 @@ paragraph--full--accordion:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--jquery-roving-tabindex
 
 # Content #
@@ -404,7 +404,7 @@ paragraph--full--hero:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--swiper
 
 # Hero Slide #
@@ -418,7 +418,7 @@ paragraph--full--hero-slide:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Featured: Content #
 paragraph--full--featured-content:
@@ -459,7 +459,7 @@ paragraph--full--featured-media:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 paragraph--full--featured-media--layout-full:
   version: 1.x
@@ -507,7 +507,7 @@ paragraph--full--product-slider:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--swiper
 
 # Banner CTA Slider #
@@ -521,7 +521,7 @@ paragraph--full--banner-cta-slider:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--swiper
 
 # Pull Quote #
@@ -556,7 +556,7 @@ paragraph--full--tabs:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--jquery-roving-tabindex
 
 # Top Message CTA Bar #
@@ -570,7 +570,7 @@ paragraph--full--top-message-cta-bar:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 
 
@@ -594,7 +594,7 @@ region--header:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Footer #
 region--footer-first:
@@ -607,7 +607,7 @@ region--footer-first:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # ========= Views ========= #
 
@@ -627,7 +627,7 @@ view--media-pages:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--jquery-roving-tabindex
 
 view--taxonomy-term:
@@ -647,7 +647,7 @@ view--related-products:
     - core/drupal
     - core/jquery
     - crescenttool_au/library--swiper
-    - core/jquery.once
+    - core/once
 
 view--product-listing-grid:
   version: 1.x
@@ -665,7 +665,7 @@ view--new-products:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - gearwrench_au/library--jquery-roving-tabindex
 
 view--product-brand-grid:
@@ -714,7 +714,7 @@ view--social-feed:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--swiper
     - crescenttool_au/library--add-to-any
 
@@ -729,5 +729,5 @@ webform--warranty-replacement-form:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - crescenttool_au/library--jquery-roving-tabindex
