--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
 image:
-  name: docksal/cli:php8.1
+  name: docksal/cli:php8.1-3.4
   run-as-user: 1000
 
 clone:
