APEX-686: Custom modules atg_callout and torque_conversion_calculator in D10

--- a/docroot/modules/custom/torque_conversion_calculator/torque_conversion_calculator.libraries.yml
+++ b/docroot/modules/custom/torque_conversion_calculator/torque_conversion_calculator.libraries.yml
@@ -10,4 +10,4 @@ torque_conversion_calculator:
     - core/drupalSettings
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
