Apex-793: sata custom theme upgrade issue completed.

--- a/docroot/themes/custom/sata/sata.libraries.yml
+++ b/docroot/themes/custom/sata/sata.libraries.yml
@@ -237,7 +237,7 @@ node--full--product:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--swiper
     - sata/library--jquery-roving-tabindex
     - sata/library--jquery-modal
@@ -252,7 +252,7 @@ node--full--product-category:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--jquery-roving-tabindex
 
 node--full--product-industry:
@@ -335,7 +335,7 @@ paragraph--full--accordion:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--jquery-roving-tabindex
 
 # Callout Diagram #
@@ -349,7 +349,7 @@ paragraph--full--callout-diagram:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Content #
 paragraph--full--content:
@@ -411,7 +411,7 @@ paragraph--full--hero:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--swiper
 
 # Hero Slide #
@@ -425,7 +425,7 @@ paragraph--full--hero-slide:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Featured: Content #
 paragraph--full--featured-content:
@@ -466,7 +466,7 @@ paragraph--full--featured-media:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 paragraph--full--featured-media--layout-full:
   version: 1.x
@@ -515,7 +515,7 @@ paragraph--full--product-slider:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--swiper
 
 # Pull Quote #
@@ -557,7 +557,7 @@ paragraph--full--tabs:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--jquery-roving-tabindex
 
 # Top Message CTA Bar #
@@ -571,7 +571,7 @@ paragraph--full--top-message-cta-bar:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 
 # ========= Region ========= #
@@ -594,7 +594,7 @@ region--utility-area:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Header #
 region--header:
@@ -607,7 +607,7 @@ region--header:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 # Footer #
 region--footer-first:
@@ -634,7 +634,7 @@ view--media-pages:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--jquery-roving-tabindex
 
 view--taxonomy-term:
@@ -654,7 +654,7 @@ view--related-products:
     - core/drupal
     - core/jquery
     - sata/library--swiper
-    - core/jquery.once
+    - core/once
 
 view--new-products:
   version: 1.x
@@ -666,7 +666,7 @@ view--new-products:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--jquery-roving-tabindex
 
 view--product-category-grid:
@@ -707,7 +707,7 @@ view--social-feed:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--swiper
     - sata/library--add-to-any
 
@@ -722,5 +722,5 @@ webform--warranty-replacement-form:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
     - sata/library--jquery-roving-tabindex
